fixed margins on small credits, added email subscribe button, replaced mailchimp w buttondown

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -189,6 +189,12 @@ li code {
       justify-content: space-around;
     }
   }
+  ul.beeg-credits {
+    justify-content: space-evenly; row-gap: 0.9rem;
+    li {
+      margin: 0rem 1rem;
+    }
+  }
 
   p {
     margin: 0rem auto;
@@ -510,4 +516,39 @@ header {
       margin: 0rem;
     }
   }
+}
+
+input.email_subscribe {
+  width: -webkit-fill-available;
+  padding: 0.5rem;
+  border-radius: 0.7rem;
+  border: 1px solid var(--text);
+  margin: auto;
+  // make the text inside bigger
+  font-size: 1.2rem;
+}
+
+input.email_subscribe_button {
+  // width: -webkit-fill-available;
+  padding: 0.2rem 1rem;
+  border-radius: 0.7rem;
+  // border: 1px solid var(--text);
+  border: none;
+  margin-top: 1rem;
+  // make the text inside bigger
+  font-size: 1.2rem;
+  background-color: var(--link-text);
+  color: var(--bg);
+  box-shadow: 0 0.2rem 0.4rem 0.1rem var(--shadow);
+  transition: box-shadow 0.15s ease-in;
+  transition: background-color 0.15s ease-in;
+  font: inherit;
+}
+
+input.email_subscribe_button:hover {
+  background-color: var(--link-underline);
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0);
+  color: white;
+  // make the pointer a hand
+  cursor: pointer;
 }
